--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>BHS Chess Club Logger</title>
+	<link rel='shortcut icon' type='image/x-icon' href='icon.png'>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -45,7 +46,7 @@
         }
 
         button {
-            background-color: #00d4ff;
+            background-color: #0091C4;
             color: white;
             cursor: pointer;
         }
@@ -95,7 +96,7 @@
 </head>
 <body>
     <div class="dashboard-container">
-        <h1>Admin Dashboard</h1>
+        <h1>BHS Chess Club Logger</h1>
 
         <div class="menu">
             <button onclick="showSection('add-section')">Add Data</button>
