--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BHS Chess Club Tracker</title>
+    <title>BHS Chess Club Match Tracker</title>
+	<link rel='shortcut icon' type='image/x-icon' href='icon.png'>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -110,7 +111,7 @@
 </head>
 <body>
     <div class="tracker-container">
-        <h1>BHS Chess Club Tournament Tracker</h1>
+        <h1>BHS Chess Club Match Tracker</h1>
         <div id="meeting-list">
             <!-- Meetings will be dynamically populated here -->
         </div>
